# MinerU

./: README.md  pyproject.toml  sitemap.xml
magic_pdf/: __init__.py
reference/output_files/: index.html
search/: search_index.json
usage/cli_tools/: index.html
zh/reference/output_files/: index.html
zh/usage/cli_tools/: index.html
